--- a/SplitEditor/SplitEditor/SplitEditor.csproj
+++ b/SplitEditor/SplitEditor/SplitEditor.csproj
@@ -35,6 +35,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <CodeAnalysisRuleSet>SplitEditor.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -43,6 +44,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <CodeAnalysisRuleSet>SplitEditor.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="DesignerControl.xaml.cs">
@@ -52,6 +54,11 @@
     <Compile Include="DesignerPane.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SourceEditorFactory.cs" />
+    <Compile Include="SplitEditor.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>SplitEditor.vsct</DependentUpon>
+    </Compile>
     <Compile Include="SplitEditorFactoryBase.cs" />
     <Compile Include="SplitEditorPackage.cs" />
     <Compile Include="SplitViewEditorControl.cs">
@@ -67,6 +74,7 @@
     <None Include="source.extension.vsixmanifest">
       <SubType>Designer</SubType>
     </None>
+    <None Include="SplitEditor.ruleset" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
@@ -86,8 +94,10 @@
     <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.4.1059" />
   </ItemGroup>
   <ItemGroup>
-    <VSCTCompile Include="SplitEditorPackage.vsct">
+    <VSCTCompile Include="SplitEditor.vsct">
       <ResourceName>Menus.ctmenu</ResourceName>
+      <Generator>VsctGenerator</Generator>
+      <LastGenOutput>SplitEditor.cs</LastGenOutput>
     </VSCTCompile>
   </ItemGroup>
   <ItemGroup>
